# starting-ragchatbot-codebase

./: .flake8  CLAUDE.md  frontend-changes.md  pyproject.toml
.claude/: settings.local.json
backend/: ai_generator.py  app.py  search_tools.py
backend/tests/: conftest.py  course_loading_test.py  diagnostic_test.py  test_ai_generator.py  test_api_endpoints.py  test_rag_system.py  test_search_tools.py  test_vector_store.py  verify_fix.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh  quality.sh
